--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.11.3</version>
     </dependency>
+  
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-test-spring</artifactId>
+      <version>3.6.0</version>
+    </dependency>
   </dependencies>
 
   <build>
